Criação do front inicial

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>IA&Law</title>
+    <title>O-Cientista</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
